argoproj/even-g2-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: even-g2-main
  namespace: even-g2-lab
spec:
  type: ClusterIP
  selector:
    app: even-g2-main
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
