argoproj/even-g2-lab/networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: even-g2-main-network-policy
  namespace: even-g2-lab
spec:
  selector: app == 'even-g2-main'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: kubernetes.io/metadata.name == 'even-g2-lab'
        selector: app == 'cloudflared'
      destination:
        ports:
          - 8080
